# learning-map-analysis

./: .editorconfig  .gitignore  .ruff.toml  LICENSE  README.md  TOOLING.md  pyproject.toml
.github/workflows/: release.yml  renovate.yml
src/learning_map_analysis/crawler_test/: README.md
src/learning_map_analysis/crawler_test/wikipedia_crawler/: README.md  USERPATH.md  app.py  community_detection_learning_journeys.json  coursera_detailed_chapter_analysis.ipynb  coursera_full_comparison_data.csv  cumulative_network_growth_plot_data.json  cumulative_time_growth_plot_data.json  detailed_chapter_analysis.ipynb  en_wikipedia_paragraph_PostgreSQL_adapter.json  evaluate_coursera.ipynb  evaluation_methods.py  full_comparison_data.csv  full_comparison_data_pre_clean.csv  gen_journeys.py  generate_methods.py  graph_builder.py  graph_tools.py  ground_truth.ipynb  main.py  networkx_graph.json  plot_entire_network.ipynb  ranking_methods.py  test.gexf  testrr.csv  visualisation.ipynb  visualisation_data_graph.json  visualize_network.ipynb  wikibook_network.json  wikipedia_first_link_network.json  wikipedia_first_paragraph_network.json
src/learning_map_analysis/visualisation/: README.md  app.py  cumulative_network_growth.json  cumulative_network_growth_plot_data.json  cumulative_time_growth_plot_data.json  en_wikipedia_paragraph_PostgreSQL_adapter.json  network_growth.json  testrr.json  visualisation_data_graph.json
src/learning_map_analysis/visualisation/static/: graph.json  network.js  visualisation_data_graph.json
(+36 files in other folders)
