[project]
name = "learning-map-analysis"
version = "0.1.0"
description = "Python project for university module on creating learning maps"
authors = [
    {name = "Andy Evans"},
]
dependencies = ["ruff>=0.8.1", "pandas>=2.2.3", "matplotlib>=3.9.2", "scipy>=1.14.1", "numpy>=2.1.3", "scrapy>=2.12.0", "beautifulsoup4>=4.12.3", "jupyterlab>=4.3.1", "fastapi>=0.115.5", "flask>=3.1.0", "networkx>=3.4.2", "seaborn>=0.13.2", "scikit-learn>=1.5.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
